test/tests/stages/8_loops/valid/extra_credit/switch_single_case.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  switch
  (
  identifier(a)
  )
  case
  const int(1)
  :
  return
  const int(1)
  ;
  return
  const int(0)
  ;
  }
