test/tests/stages/8_loops/invalid_semantics/extra_credit/duplicate_case_in_nested_statement.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[38]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(10)
  ;
  switch
  (
  identifier(a)
  )
  {
  case
  const int(1)
  :
  {
  if
  (
  const int(1)
  )
  {
  case
  const int(1)
  :
  return
  const int(0)
  ;
  }
  }
  }
  return
  const int(0)
  ;
  }
